force-app/main/default/objects/OrderItem/fields/CWS_ZuoraSubscriptionRatePlanChargeId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraSubscriptionRatePlanChargeId__c</fullName>
    <description>Subscription rate plan charge id from the billing system</description>
    <inlineHelpText>Subscription rate plan charge id from the billing system</inlineHelpText>
    <label>Subscription Rate Plan Charge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>