force-app/main/default/objects/OrderItem/fields/CWS_ZuoraSubscriptionRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>CWS_ZuoraSubscriptionRatePlanId__c</fullName>
    <description>Subscription Rate plan Id from the billing system</description>
    <inlineHelpText>Subscription Rate plan Id from the billing system</inlineHelpText>
    <label>Subscription Rate Plan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>