force-app/main/default/objects/OrderItem/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product Code</description>
    <formula>Product2.CWS_ProductCode__c</formula>
    <inlineHelpText>Product Code</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>