force-app/main/default/objects/OrderItem/validationRules/SBQQ__RecurringChargeTypeMustHaveBillingType.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
    <active>false</active>
    <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
    <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
</ValidationRule>